🐛 Fixed overlapping borders on cards

--- a/src/Fydar.Dev.WebApp/Components/Blocks/Cards/Card.razor.css
+++ b/src/Fydar.Dev.WebApp/Components/Blocks/Cards/Card.razor.css
@@ -249,7 +249,8 @@
     }
 
     .card::before {
-        border: 2px solid #ffffff14;
+        /*border: 2px solid #ffffff14;*/
+        border: 2px solid #28282a;
     }
 
     .card::after {
